--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     font-family: Arial,serif;
     -webkit-user-select: none;
 }
+.clearfix {
+	clear: both;
+}
 .pay-wrapper {
 	
 	position: absolute;
@@ -21,7 +24,7 @@
      width: 611px;
     height: 377px;
     margin-left: 335px; /* или отцентрировать с помощью position */
-    padding: 19px 17px;
+    padding: 19px 19px;
 }
 .pay__header {
 	    font-size: 30px;
@@ -39,8 +42,7 @@ font-size: 14px;
 }
 .pay__type-item {
 	display: inline-block;
-	margin-right: 3px;
-    margin-left: 3px;
+	margin-right: 6px;
 }
 .pay__type-item:last-of-type {
 	margin-right: 0;
@@ -52,7 +54,7 @@ font-size: 14px;
     border: 1px solid #D2D2D2;
         box-shadow: 0 4px 10px 0px #D2D2D2;
     background: -webkit-linear-gradient(bottom, #E9E9E9 5%, white 100% );
-    
+   cursor: pointer; 
 }
 .pay__button_privat24:after {
 	     content: "";
@@ -61,7 +63,7 @@ font-size: 14px;
     background: url("img/svg/privat24.svg") no-repeat;
     height: 23px;
     margin-top: -4px;
-    margin-left: 13px;
+    margin-left: 15px;
 }
 
 .pay__button_visa:after {
@@ -71,7 +73,7 @@ font-size: 14px;
     background: url("img/svg/visa.svg") no-repeat;
     height: 100px;
     margin-top: 22px;
-    margin-left: 10px;
+    margin-left: 12px;
 }
 
 .pay__button_yandex:after {
@@ -81,7 +83,7 @@ font-size: 14px;
     background: url("img/svg/yandex.svg") no-repeat;
     height: 100px;
     margin-top: 15px;
-    margin-left: 15px;
+    margin-left: 17px;
 }
 .pay__button_sms:after {
 	    content: "";
@@ -89,7 +91,7 @@ font-size: 14px;
     width: 101px;
     background: url("img/svg/sms.svg") no-repeat;
     height: 50px;
-    margin-left: 28px;
+    margin-left: 29px;
 }
 
 .pay__button:hover {
@@ -98,4 +100,30 @@ font-size: 14px;
 }
 .pay__button:focus {
 	outline: none;
+}
+.pay__ammount {
+	width: 101px;
+    margin-top: 6px;
+    height: 47px;
+    padding: 2px 5px;
+    border: 1px solid #d2d2d2;
+    border-radius: 6px;
+    box-shadow: 0px 2px 6px 0px lightgrey inset;
+    float: left;
+        margin-bottom: 3px;
+    font-size: 100%;
+}
+.pay__ammount:focus {
+	outline: none;
+	border-color: lightskyblue; 
+}
+.pay__ammount-currency {
+	    display: block;
+    position: relative;
+    top: 24px;
+    left: 5px;
+    font-size: 14px;
+}
+.pay__privat24-text {
+	font-size: 13px;
 }
