--- a/style.css
+++ b/style.css
@@ -24,21 +24,25 @@
      width: 611px;
     height: 377px;
     margin-left: 335px; /* или отцентрировать с помощью position */
-    padding: 19px 19px;
+    padding-top: 19px;
+    overflow: hidden;
 }
 .pay__header {
 	    font-size: 30px;
     font-weight: 100;
     font-family: Arial;
+    margin-left: 19px;
 }
 .pay__title {
 font-size: 14px;
     font-weight: 100;
     margin-top: 12px;
+    margin-left: 19px
 }
 .pay__type {
 	list-style: none;
 	margin-top: 7px;
+    margin-left: 19px;
 }
 .pay__type-item {
 	display: inline-block;
@@ -101,6 +105,9 @@ font-size: 14px;
 .pay__button:focus {
 	outline: none;
 }
+.pay__button_pressed {
+    box-shadow: 2px 2px 8px 1px grey inset;
+}
 .pay__ammount {
 	width: 101px;
     margin-top: 6px;
@@ -111,6 +118,7 @@ font-size: 14px;
     box-shadow: 0px 2px 6px 0px lightgrey inset;
     float: left;
         margin-bottom: 3px;
+        margin-left: 19px;
     font-size: 100%;
 }
 .pay__ammount:focus {
@@ -124,6 +132,57 @@ font-size: 14px;
     left: 5px;
     font-size: 14px;
 }
+#pay__privat24 {
+    display: none;
+}
 .pay__privat24-text {
 	font-size: 13px;
+    margin-left: 19px;
+}
+.pay__footer {
+    height: 100px; /*mbd */
+    background: #EDF6FB;
+    margin-top: 18px;
+    padding-top: 19px;
+}
+.pay__footer-btn {
+    margin-left: 19px;
+    width: 280px;
+    height: 55px;
+    background-color: #62C008;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    float: left;
+}
+.pay__footer-btn:focus {
+    outline: none;
+}
+.pay__footer-btn:hover {
+    background-color: green;
+}
+.pay__footer-text {
+        font-size: 13px;
+    color: grey;
+    position: relative;
+    top: 11px;
+    left: 11px;
+}
+.pay__sms {
+    position: relative;
+}
+.pay__sms-ammount {
+        margin-left: 19px;
+    margin-top: 6px;
+    width: 142px;
+    height: 45px;
+    padding-left: 7px;
+
+}
+.pay__sms-ammount option {
+    position: absolute;
+    top: 20px;
 }
